--- a/ui/package.json
+++ b/ui/package.json
@@ -2,11 +2,23 @@
   "name": "ui",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.2",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "spectre.css": "^0.5.8"
+  },
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
     "spectre.css": "^0.5.8"
   },
   "scripts": {
