--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ idna==2.8
 inflection==0.3.1
 isort==4.3.17
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2==2.10.1
 jsonschema==2.6.0
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.1
@@ -24,7 +24,7 @@ Paste==3.0.8
 pycodestyle==2.5.0
 pylint==2.3.1
 pytz==2019.1
-PyYAML==3.13
+PyYAML==4.2b1
 requests==2.21.0
 six==1.12.0
 slackclient==1.3.0
@@ -32,7 +32,7 @@ slacker==0.12.0
 SQLAlchemy==1.3.3
 swagger-ui-bundle==0.0.3
 typed-ast==1.3.1
-urllib3==1.24.1
+urllib3==1.24.2
 webapp2==2.5.2
 websocket-client==0.54.0
 Werkzeug==0.14.1
