--- a/ui/package.json
+++ b/ui/package.json
@@ -25,7 +25,7 @@
     "spectre.css": "^0.5.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=5001 react-scripts start",
     "build": "react-scripts build",
     "test": "CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
