--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,23 @@
-aniso8601==6.0.0
-astroid==2.2.5
-autopep8==1.4.4
-certifi==2018.11.29
-chardet==3.0.4
-Click==7.0
-clickclick==1.2.2
-connexion==2.2.0
-Flask==1.0.2
-Flask-Cors==3.0.7
-flask-restplus==0.12.1
-Flask-SQLAlchemy==2.3.2
-idna==2.8
-inflection==0.3.1
-isort==4.3.17
-itsdangerous==1.1.0
-Jinja2==2.10.1
-jsonschema==2.6.0
-lazy-object-proxy==1.3.1
-MarkupSafe==1.1.1
-mccabe==0.6.1
-openapi-spec-validator==0.2.5
-Paste==3.0.8
-pycodestyle==2.5.0
-pylint==2.3.1
-pytz==2019.1
-PyYAML==4.2b1
-requests==2.21.0
-six==1.12.0
-slackclient==1.3.0
-slacker==0.12.0
-SQLAlchemy==1.3.3
-swagger-ui-bundle==0.0.3
-typed-ast==1.4.0
-urllib3==1.24.2
-webapp2==2.5.2
-websocket-client==0.54.0
-Werkzeug==0.15.3
-wrapt==1.11.1
+aniso8601==9.0.1
+attrs==22.1.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
+Flask==2.1.3
+Flask-Cors==3.0.10
+flask-restx==0.5.1
+Flask-SQLAlchemy==2.5.1
+idna==3.4
+importlib-metadata==4.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jsonschema==4.16.0
+MarkupSafe==2.1.1
+pyrsistent==0.18.1
+pytz==2022.2.1
+requests==2.28.1
+six==1.16.0
+SQLAlchemy==1.4.41
+urllib3==1.26.12
+Werkzeug==2.1.2
+zipp==3.8.1
